Fixed issue with video description overlapping comments when expanded.

--- a/src/Components/CommentsForm/commentsForm.css
+++ b/src/Components/CommentsForm/commentsForm.css
@@ -3,6 +3,11 @@
     border: none;
     border-bottom: 2px solid #353946;
     color: #fff;
+    width: 25%;
+}
+
+.comment_input:focus {
+    outline: none;
 }
 
 .comment_button {
