--- a/src/Components/VideoDescription/videoDescription.css
+++ b/src/Components/VideoDescription/videoDescription.css
@@ -2,8 +2,8 @@
 .video_description  {
     font-size: 14px;
     line-height: 22px;
-    max-height: 60px;
     color: #fff;
+    position: relative;
 }
 
 .videoTitle {
